--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -10,6 +10,8 @@
   flex-direction: column;
   background-color: var(--color-indigo-500);
   position: relative;
+  min-height: 100dvh;
+  justify-content: flex-end;
 }
 
 /* ===================
@@ -22,7 +24,7 @@
   align-items: center;
   width: 632px;
   max-width: 100%;
-  margin: auto auto var(--spacing-600);
+  margin: 0 auto var(--spacing-600);
   padding: var(--spacing-400) 0;
 }
 
@@ -51,7 +53,7 @@
   gap: var(--spacing-400);
   align-items: start;
   justify-content: center;
-  padding: 0 var(--spacing-200);
+  padding: 0 var(--spacing-200) 169px;
 }
 
 .game > .player-card--p1 {
@@ -74,5 +76,5 @@
   flex: 1;
   width: 100%;
   max-height: 200px;
-  background-color: var(--color-indigo-700);
+  background-color: var(--winner-color, var(--color-indigo-700));;
 }
